2008-10-12  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/git.py: fixed remaining occurences of
	'git-svn' command usage (closes: #555259); also cleaned up module.

2008-10-12  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: reall use glib trunk.

2008-10-11  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-2.26.modules: Added gjs,
	gobject-introspection and gir-repository.

2008-10-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: accerciser branched for 2.24.

2008-10-09  Frederic Peters  <fpeters@0d.be>

	* sample.jhbuildrc: fixed reference to makeargs in sample configuration
	file.

2008-10-09  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-suites-2.26.modules: Use glib trunk.

2008-10-06  José Alburquerque  <jaalburqu@svn.gnome.org>

	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules: Added gst-plugins-good to gstreamermm
	package suggestion dependency list.

2008-10-03  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-external-deps-2.26.modules: Update libxml version
	to 2.7.2

2008-10-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: gnome-build and gdl branched
	for 2.24.

2008-10-02  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: bumped gnutls to 2.4.2
	as the older version is no longer available and the new one has some
	security fixes.

2008-10-02  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules:
	* modulesets/gnome-external-deps-2.26.modules: removed opencdk as it is
	now shipped as part of gnutls.

2008-10-02  Iago Toral Quiroga  <itoral@igalia.com>

	* jhbuild/buildbot/steps.py: Fixed JHBuildModulePathCommand so
	that action is a string instead of a list. Also, fixed incorrect
	usage of the --in-builddir option when executing the action.

2008-10-02  Iago Toral Quiroga  <itoral@igalia.com>
