@@ -1,5 +1,13 @@
 2008-10-12  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/versioncontrol/arch.py, jhbuild/versioncontrol/bzr.py,
+	jhbuild/versioncontrol/cvs.py, jhbuild/versioncontrol/darcs.py,
+	jhbuild/versioncontrol/git.py, jhbuild/versioncontrol/hg.py,
+	jhbuild/versioncontrol/mtn.py, jhbuild/versioncontrol/svn.py: check the
+	programs exist before the checkout (closes: #555690)
+
+2008-10-12  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/versioncontrol/git.py: fixed remaining occurences of
 	'git-svn' command usage (closes: #555259); also cleaned up module.
 
